force-app/main/default/objects/Account/fields/AddressVerificationError__c.field-meta.xml
<CustomField>
    <fullName>AddressVerificationError__c</fullName>
    <label>Address Verification Error</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>