force-app/main/default/objects/Account/fields/AddressVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressVerificationStatus__c</fullName>
    <label>Address Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>